# Module_10

./: README.md  pyproject.toml
hw_10/: pyproject.toml
hw_10/hw_project/: db.sqlite3
hw_10/hw_project/hw_project/: settings.py  urls.py
hw_10/hw_project/quotes/: forms.py  models.py  urls.py  utils.py  views.py
hw_10/hw_project/quotes/migrations/: 0001_initial.py  0002_alter_tag_name.py
hw_10/hw_project/quotes/static/quotes/: style.css
hw_10/hw_project/quotes/templates/quotes/: add_author.html  add_quote.html  author_detail.html  base.html  index.html
hw_10/hw_project/quotes/templatetags/: extract.py
hw_10/hw_project/users/: urls.py  views.py
hw_10/hw_project/utils/: add_quote.py  authors.json  migration.py
