[tool.poetry]
name = "hw-10"
version = "0.1.0"
description = ""
authors = ["YarValeriy <147444561+YarValeriy@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.3"
pymongo = "^4.6.3"
psycopg2 = "^2.9.9"
django-environ = "^0.11.2"
pillow = "^10.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
